--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -613,6 +613,7 @@ components:
               - $ref: '#/components/schemas/ProductDataAndRelationships'
               - $ref: '#/components/schemas/TaxonDataAndRelationships'
               - $ref: '#/components/schemas/TaxonomyDataAndRelationships'
+              - $ref: '#/components/schemas/Image'
     TaxonData:
       type: object
       properties:
@@ -694,6 +695,12 @@ components:
         taxonomy:
           type: object
           description: 'Taxonomy associated with this Taxon'
+          properties:
+            data:
+              $ref: '#/components/schemas/Relation'
+        image:
+          type: object
+          description: 'Image associated with Taxon'
           properties:
             data:
               $ref: '#/components/schemas/Relation'
